--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>WCB cafe</title>
 <meta name="description" content="ブレンドコーヒーとヘルシーなオーガニックフードを提供するカフェ">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 
 <link rel="icon"  type="image/png" href="images/favicon.png">
 
@@ -18,7 +19,7 @@
 <div id="home" class="big-bg">
 
 
-  <header class="page-header wrapper">
+  <header class="page-header  wrapper">
 
 
   <h1><a herf="index.html"><img class="logo" src="images/logo.svg"
